k8s/registry-config-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: registry-config
  namespace: aegis-dev
spec:
  selector:
    matchLabels:
      name: registry-config
  template:
    metadata:
      labels:
        name: registry-config
    spec:
      hostPID: true
      hostNetwork: true
      containers:
      - name: sleep
        image: alpine:latest
        command: [ "sleep", "infinity" ]
      volumes:
      - name: host-root
        hostPath:
          path: /
